Changelog
=========

0.8.0 (?)
---------

* New functions and classes:
  - recipes.chained_getter
* New unit tests:
  - tests.test_recipes.TestChainedGetter


0.7.1 (2022-10-24)
------------------

* New functions and classes:
  - npy_util.prune_mask


0.7.0 (2022-10-17)
------------------

* New functions and classes:
  - npy_util.masked_index
  - npy_util.unmasked_index
  - npy_util.find_peaks
* New unit tests:
  - tests.test_npy_util.TestMaskedIndex
  - tests.test_npy_util.TestUnmaskedIndex
  - tests.test_npy_util.TestFindPeaks


0.6.0 (2022-10-11)
------------------

* API changes:
  - Parameter stop in recipes.RangeBuilder.update is now optional
  - Property span in recipes.RangeBuilder
* Bugfixes:
  - Fixed handling of bulleted list styles in files.docx.list_number


0.5.0 (2022-06-17)
------------------

* New functions and classes:
  - multiline_repr in string_util
  - RangeBuilder in recipes


0.4.0 (2022-06-02)
------------------

* New functions and classes:
  - npy_util.replace_field
* New unit tests:
  - tests.test_npy_util.TestReplaceField


0.3.0 (2022-03-29)
------------------

* New functions and classes:
  - load.load_module no longer nested in load.module_as_dict
  - npy_util.iterate_dtype
* Bugfixes:
  - files.PreOpenedFile object is now properly iterable
* New unit tests:
  - tests.test_load.TestLoadModule
  - tests.test_load.TestModuleAsDict


0.2.0 (2022-01-27)
------------------

* New modules:
  - npy_util
  - tests.test_numbers
  - tests.test_objects
* New functions and classes:
  - getsizeof, size_type_mapping in objects
  - ndarray_handler added to size_type_mapping in objects
  - isolate_dtype in npy_util
  - as_base, digit_count in numbers
* New unit tests:
  - tests.test_objects.TestGetsizeof
  - tests.test_numbers.TestAsBase
  - tests.test_numbers.TestDigitCount
* Added docs to sdist
* Moved map_array, mask2runs, runs2mask from math to npy_util


0.1.1 (2022-01-16)
------------------

Minor updates to first release.
