@@ -7,7 +7,11 @@ Changelog
 * New functions and classes:
   - recipes.chained_getter
 * New unit tests:
+  - tests.test_logs.TestLogMaxFilter
+  - tests.test_logs.TestMetaLoggableType
   - tests.test_recipes.TestChainedGetter
+* Bugfixes:
+  - Fixed sense of inclusive in logs.LogMaxFilter
 
 
 0.7.1 (2022-10-24)
